@@ -485,10 +485,10 @@ message sent to the room, which can use <S-NAME> for the actor, and <T-NAME> for
 PROP_CLOSEDDAYNIGHT=\
 Property   : Prop_ClosedDayNight\n\r\
 Targets    : Items, Mobs, Rooms, Exits\n\r\
-Parameters : (DAY/NIGHT)(SLEEP)(SIT)(LOCKUP)(HOURS=0-13)(HOME=Room#)\n\r\
+Parameters : (DAY/NIGHT)(SLEEP)(SIT)(LOCKUP)(HOURS=0-13)(HOME=Room#)(MASK=)\n\r\
 Example    : DAY\n\r\
 Example    : SLEEP HOURS=5-10\n\r\
-Example    : "Home=My Area#123" SLEEP LOCKUP\n\r\
+Example    : "Home=My Area#123" SLEEP LOCKUP MASK=-RACE +ELF\n\r\
 Example    : "Home=Bob`s House" SLEEP LOCKUP "SHOPMSG=Go Away! I'm Closed!"\n\r\
 Description: \n\r\
 Affects the thing with this property depending on the time of day. \
@@ -510,8 +510,9 @@ Parameters : (SUMMER/SPRING/WINTER/FALL/DAY/NIGHT\n\r\
 Parameters :  DUSK/DAWN/RAIN/SLEET/SNOW/CLEAR/HEATWAVE\n\r\
 Parameters :  THUNDERSTORM/BLIZZARD/WINDY\n\r\
 Parameters :  DROUGHT/DUSTSTORM/COLD/HAIL/CLOUDY)\n\r\
+Parameters : (MASK=[ZAPPERMASK])\n\r\
 Example    : DAY\n\r\
-Example    : WINTER BLIZZARD\n\r\
+Example    : WINTER BLIZZARD MASK=-RACE +ELF\n\r\
 Description: \n\r\
 Affects the thing with this property depending on the weather, or time of the year. \
 By default, this property does not activate.  You must specify one or more times, seasons, \
