@@ -316,9 +316,11 @@
 		<TD WIDTH=450 COLSPAN=2><INPUT TYPE=TEXT NAME=LEVEL SIZE=5 VALUE="@ItemData?LEVEL@">
 		@if?ItemData?ISARMOR@
 			<INPUT TYPE=BUTTON ONCLICK="ChangedLevel();" NAME=BUTTCHANGEDLEVEL VALUE="ReScore">
+			<FONT SIZE=-1 COLOR="#66FFFF">(<I>Power Level:</I><FONT COLOR=WHITE>@ItemData?POWLEVEL@</FONT>)</FONT>
 		@endif@
 		@if?ItemData?ISWEAPON@
 			<INPUT TYPE=BUTTON ONCLICK="ChangedLevel();" NAME=BUTTCHANGEDLEVEL VALUE="ReScore">
+			<FONT SIZE=-1 COLOR="#66FFFF">(<I>Power Level:</I><FONT COLOR=WHITE>@ItemData?POWLEVEL@</FONT>)</FONT>
 		@endif@
 		</TD>
 	</TR>
