@@ -19,6 +19,7 @@
  17. New Zappermask: +-CLANLEVEL, for filtering a members clan's level
  18. New Bombs: Bomb_SpellBlast
  19. New Spell: Spell_DetonateBombs
+ 20. Prop_Closed* properties now support a zappermask for the object.
 
 # Build 5.10.0 Release 9/23/2022
   1. New Scriptable functions: ROOMPC and AREAPC
